update links to css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,14 +11,14 @@
     <title>{{ site.title }} {% if page.title %} | {{ page.title }}{% endif %}</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{{ site.baseurl }}/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://yu-group.github.io/covid19-severity-prediction//assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="{{ site.baseurl }}/assets/css/grayscale.css" rel="stylesheet">
-    <link href="{{ site.baseurl }}/assets/css/timeline.css" rel="stylesheet">
-    <link href="{{ site.baseurl }}/assets/css/chandan.css" rel="stylesheet">
+    <link href="https://yu-group.github.io/covid19-severity-prediction//assets/css/grayscale.css" rel="stylesheet">
+    <link href="https://yu-group.github.io/covid19-severity-prediction//assets/css/timeline.css" rel="stylesheet">
+    <link href="https://yu-group.github.io/covid19-severity-prediction//assets/css/chandan.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="{{ site.baseurl }}/assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<!--    <link href="https://yu-group.github.io/covid19-severity-prediction//assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
 
 </head>
