renamed updating scripts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,6 @@
     <link href="https://yu-group.github.io/covid19-severity-prediction//assets/css/chandan.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-<!--    <link href="https://yu-group.github.io/covid19-severity-prediction//assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
+    <link href="https://yu-group.github.io/covid19-severity-prediction//assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 </head>
