--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -16,7 +16,8 @@ include the location of the hospital, the number of ICU beds, the total number
 of employees, and the hospital type. At the county level, our data include
 COVID-19 cases/deaths from USA Facts and NYT, automatically updated every day, along with demographic information, health resource availability, COVID-19
 health risk factors, and social mobility information.
-                     <div align="center"> <a type="button" class="btn btn-primary" style="margin-bottom: 30px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">View project on Github</a> </div>
+                     <div align="center"> <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">View project on Github</a>
+                     <a type="button" class="btn btn-success" style="margin-bottom: 30px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">arXiv paper (coming soon)</a> </div>
                     </p>
 
                     <a href="#data" class="btn btn-circle page-scroll">
