--- a/_includes/03_visualizations.html
+++ b/_includes/03_visualizations.html
@@ -17,10 +17,10 @@ We can visualize these features on interactive maps:
   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/ny.html" frameborder="0" allowfullscreen="true" width="140%" height="800"> </iframe>
 </figure>
 
-We can plot the outbreak for the counties with the highest number of deaths so far (updated daily):
-<figure class="video_container" style="text-align: center">
-  <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/county_curves.html" frameborder="0" allowfullscreen="true" width="140%" height="800"> </iframe>
-</figure>
+<!-- We can plot the outbreak for the counties with the highest number of deaths so far (updated daily): -->
+<!-- <figure class="video_container" style="text-align: center"> -->
+<!--   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/county_curves.html" frameborder="0" allowfullscreen="true" width="140%" height="800"> </iframe> -->
+<!-- </figure> -->
 
 
 <h3 align="center"> Hospital-level </h3>
