--- a/_includes/03_visualizations.html
+++ b/_includes/03_visualizations.html
@@ -3,7 +3,6 @@
 <h3 align="center"> County-level </h3>
 
 Many of the county-level features we have collected are correlated with the total number of deaths recorded so far at each county (and with each other):
-![](results/correlations_heatmap.png)
 
 ## Interactive visualizations of different counties
 
@@ -12,10 +11,10 @@ We can also plot the predicted number of deaths at the county-level:
   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/deaths.html" frameborder="0" allowfullscreen="true" width="140%" height="800"> </iframe>
 </figure>
 
-We can visualize these features on interactive maps:
-<figure class="video_container">
-  <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/ny.html" frameborder="0" allowfullscreen="true" width="140%" height="800"> </iframe>
-</figure>
+<!-- We can visualize these features on interactive maps: -->
+<!-- <figure class="video_container"> -->
+<!--   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/ny.html" frameborder="0" allowfullscreen="true" width="140%" height="800"> </iframe> -->
+<!-- </figure> -->
 
 <!-- We can plot the outbreak for the counties with the highest number of deaths so far (updated daily): -->
 <!-- <figure class="video_container" style="text-align: center"> -->
