--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -3,19 +3,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <br>
-                    <br><br>
-                    <p class="intro-text">
 
+                    <p class="intro-text" style="margin-top: 100px;">
 
                     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0IZcUMdTrz6KIw9G1yuzcKHRDUJTS7rQvASzZLKUMi5VFrt18-HptCG6-627VM5McNNNjUirt9fb7/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="600" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-                        The Yu Group at UC Berkeley Statistics and EECS has compiled and cleaned a large
-corpus of hospital- and county-level data from a variety of public sources to
-aid data science efforts to combat COVID-19. At the hospital level, our data
-include the location of the hospital, the number of ICU beds, the total number
-of employees, and the hospital type. At the county level, our data include
-COVID-19 cases/deaths from USA Facts and NYT, automatically updated every day, along with demographic information, health resource availability, COVID-19
-health risk factors, and social mobility information.
+                        In recent weeks, the novel coronavirus causing COVID-19 has dramatically changed the shape of our global society and economy,
+                        impacting the lives of almost every individual on the planet to an extent modern civilization has never experienced.
+                        Our group is working to help guide the allocation of medical supplies by (1) curating county-level and hospital-level data on
+                        covid-19 (including demographics, risk factors, social distancing data) and (2) build simple models for forecasting deaths at the county-level
+                        and predicting severity at the hospital-level.
                      <div align="center"> <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">View project on Github</a>
                      <a type="button" class="btn btn-success" style="margin-bottom: 30px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">arXiv paper (coming soon)</a> </div>
                     </p>
