--- a/_includes/03_visualizations.html
+++ b/_includes/03_visualizations.html
@@ -1,12 +1,7 @@
 <h1 align="center"> visualizations </h1>
 
-<h3 align="center"> County-level </h3>
+<p> We can also plot the predicted number of deaths at the county-level: </p>
 
-Many of the county-level features we have collected are correlated with the total number of deaths recorded so far at each county (and with each other):
-
-## Interactive visualizations of different counties
-
-We can also plot the predicted number of deaths at the county-level:
 <figure class="video_container">
   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/deaths.html" frameborder="0" allowfullscreen="true" width="140%" height="800"> </iframe>
 </figure>
@@ -22,14 +17,24 @@ We can also plot the predicted number of deaths at the county-level:
 <!-- </figure> -->
 
 
-<h3 align="center"> Hospital-level </h3>
+<br>
 
 
-This covid pandemic severity index is designed to help decide where medical resources should be allocated. It takes on three values (3: High, 2: Medium, 1: Low), indicating the severity of the covid-19 outbreak for a given hospital on a certain day. It is calculated in three steps:
+<p> This <strong>covid pandemic severity index (CPSI)</strong> is designed to help aid the distribution of medical resources to hospitals.
+  It takes on three values (3: High, 2: Medium, 1: Low), indicating the severity of the covid-19 outbreak for a hospital on a certain day. It is calculated in three steps:
 
-- county-level predictions for number of deaths are modeled
-- county-level predictions are allocated to hospitals within counties proportional the their total number of employees
-- final value is decided by thresholding the number of cumulative predicted deaths for a hospital (=current recorded deaths + predicted future deaths)
+  (1) county-level predictions for number of deaths are modeled
+(2) county-level predictions are allocated to hospitals within counties proportional the their total number of employees
+(3) final value is decided by thresholding the number of cumulative predicted deaths for a hospital (=current recorded deaths + predicted future deaths)
+
+  <br>
+  <br>
+
+  The plot below shows the evolution of the CPSI for different hospitals as a function of the total deaths recorded at that hospital so far, and the predicted deaths.
+  Bubble size indicates hospital size (total number of employees).
+</p>
+
+
 
 
 <figure class="video_container" style="text-align: center">
