--- a/_includes/03_visualizations.html
+++ b/_includes/03_visualizations.html
@@ -35,9 +35,9 @@
 </p>
 
 
-
-
 <figure class="video_container" style="text-align: center">
   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/hospital_index_animated.html" frameborder="0" allowfullscreen="true" width="100%" height="700"> </iframe>
 </figure>
+
+We are also pushing our daily predictions to this <a href="https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=582592389">google sheet</a>.
 
