--- a/_includes/03_visualizations.html
+++ b/_includes/03_visualizations.html
@@ -1,6 +1,8 @@
 <h1 align="center"> visualizations </h1>
 
-<p> We can also plot the predicted number of deaths at the county-level: </p>
+<p> We are pushing our daily county-level predictions to this <a href="https://docs.google.com/spreadsheets/d/1ZSG7o4cV-G0Zg3wlgJpB2Zvg-vEN1i_76n2I-djL0Dk/edit#gid=1510898570">google sheet</a> and hospital-level predictions to this <a href="https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=582592389">google sheet</a>. </p>
+
+<p> The map below shows forecasts for the number of deaths at the county-level.</p>
 
 <figure class="video_container">
   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/deaths.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>
@@ -25,7 +27,7 @@
 
   (1) county-level predictions for number of deaths are modeled
 (2) county-level predictions are allocated to hospitals within counties proportional the their total number of employees
-(3) final value is decided by thresholding the number of cumulative predicted deaths for a hospital (=current recorded deaths + predicted future deaths)
+(3) final value is decided by thresholding the number of cumulative predicted deaths for a hospital (=current recorded deaths + predicted future deaths).
 
   <br>
   <br>
@@ -38,6 +40,3 @@
 <figure class="video_container" style="text-align: center">
   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/hospital_index_animated.html" frameborder="0" allowfullscreen="true" width="100%" height="700"> </iframe>
 </figure>
-
-We are also pushing our daily predictions to this <a href="https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=582592389">google sheet</a>.
-
