--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -7,11 +7,8 @@
                     <p class="intro-text" style="margin-top: 100px;">
 
                     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0IZcUMdTrz6KIw9G1yuzcKHRDUJTS7rQvASzZLKUMi5VFrt18-HptCG6-627VM5McNNNjUirt9fb7/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="600" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-                        In recent weeks, the novel coronavirus causing COVID-19 has dramatically changed the shape of our global society and economy,
-                        impacting the lives of almost every individual on the planet to an extent modern civilization has never experienced.
-                        Our group is working to help guide the allocation of medical supplies by (1) curating county-level and hospital-level data on
-                        covid-19 (including demographics, risk factors, social distancing data) and (2) build simple models for forecasting deaths at the county-level
-                        and predicting severity at the hospital-level.
+<a href="https://www.stat.berkeley.edu/~yugroup/people.html">Our group</a> at UC Berkeley is working to help forecast the severity of the epidemic both for individual counties and individual hospitals. As a byproduct, we have and will continue to produce models, visualizations, and curated datasets (including confirmed cases/deaths, demographics, risk factors, social distancing data) that can be used by other teams in the fight against COVID-19. We are collaborating with <a href="https://response4life.org/">Response4Life</a>, a non-profit organization, whose goal is to blunt the effect of COVID-19 through the production and appropriate distribution of PPE, medical equipment, and medical personnel to healthcare facilities across the United States.
+
                      <div align="center"> <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">View project on Github</a>
                      <a type="button" class="btn btn-success" style="margin-bottom: 30px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">arXiv paper (coming soon)</a> </div>
                     </p>
