minor css update

--- a/_includes/03_visualizations.html
+++ b/_includes/03_visualizations.html
@@ -1,17 +1,10 @@
 <h1 align="center"> visualizations </h1>
 
-<p> We are pushing our daily county-level predictions to this <a href="https://docs.google.com/spreadsheets/d/1ZSG7o4cV-G0Zg3wlgJpB2Zvg-vEN1i_76n2I-djL0Dk/edit#gid=1510898570">google sheet</a> and hospital-level predictions to this <a href="https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=582592389">google sheet</a>. </p>
-
-<p> The map below shows forecasts for the number of deaths at the county-level.</p>
+<p> We are pushing our daily county-level predictions to this <a href="https://docs.google.com/spreadsheets/d/1ZSG7o4cV-G0Zg3wlgJpB2Zvg-vEN1i_76n2I-djL0Dk/edit#gid=1510898570">google sheet</a> and hospital-level predictions to this <a href="https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=582592389">google sheet</a>. The map below shows forecasts for the number of deaths at the county-level.</p>
 
 <figure class="video_container">
   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/deaths.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>
 </figure>
-
-<!-- We can visualize these features on interactive maps: -->
-<!-- <figure class="video_container"> -->
-<!--   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/ny.html" frameborder="0" allowfullscreen="true" width="140%" height="800"> </iframe> -->
-<!-- </figure> -->
 
 <!-- We can plot the outbreak for the counties with the highest number of deaths so far (updated daily): -->
 <!-- <figure class="video_container" style="text-align: center"> -->
