--- a/assets/css/chandan.css
+++ b/assets/css/chandan.css
@@ -7,7 +7,7 @@ a{
     vertical-align: middle;
 }
 
-a, h1, h2, h3, h4, h5, ul, li {
+h1, h2, h3, h4, h5, ul, li {
     text-transform: lowercase;
 }
 
