--- a/_includes/03_visualizations.html
+++ b/_includes/03_visualizations.html
@@ -5,13 +5,7 @@
 <figure class="video_container">
   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/deaths.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>
 </figure>
-
-<!-- We can plot the outbreak for the counties with the highest number of deaths so far (updated daily): -->
-<!-- <figure class="video_container" style="text-align: center"> -->
-<!--   <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/county_curves.html" frameborder="0" allowfullscreen="true" width="140%" height="800"> </iframe> -->
-<!-- </figure> -->
-
-
+<a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://yu-group.github.io/covid19-severity-prediction/results/deaths.html">View map in fullscreen</a>
 <br>
 
 
@@ -24,12 +18,12 @@
 
   <br>
   <br>
-
-  The plot below shows the evolution of the CPSI for different hospitals as a function of the total deaths recorded at that hospital so far, and the predicted deaths.
-  Bubble size indicates hospital size (total number of employees).
+  The map below shows hospitals along with their severity indexes and some additional data.
+  See  evolution of the CPSI for different hospitals as a function of the total deaths recorded at that hospital so far, and the predicted deaths <a href="https://yu-group.github.io/covid19-severity-prediction/results/hospital_index_animated.html"> here. </a>
 </p>
 
 
-<figure class="video_container" style="text-align: center">
-  <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/hospital_index_animated.html" frameborder="0" allowfullscreen="true" width="100%" height="700"> </iframe>
+<figure class="video_container">
+  <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/severity_map.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>
 </figure>
+<a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://yu-group.github.io/covid19-severity-prediction/results/severity_map.html">View map in fullscreen</a>
