--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,9 +18,9 @@
                         <a href="#page-top"></a>
                     </li>
 
-                    <li><a class="page-scroll" href="https://yu-group.github.io/covid19-severity-prediction/#data">data</a></li>
-                    <li><a class="page-scroll" href="https://yu-group.github.io/covid19-severity-prediction/#models">models</a></li>
-                    <li><a class="page-scroll" href="https://yu-group.github.io/covid19-severity-prediction/#visualizations">visualizations</a></li>
+                    <li><a class="page-scroll" href="#data">data</a></li>
+                    <li><a class="page-scroll" href="#models">models</a></li>
+                    <li><a class="page-scroll" href="#visualizations">visualizations</a></li>
 
 
                 </ul>
