--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -9,7 +9,7 @@
 <a href="https://www.stat.berkeley.edu/~yugroup/people.html">Our group</a> at UC Berkeley is working to help forecast the severity of the epidemic both for individual counties and individual hospitals. As a byproduct, we have and will continue to produce models, visualizations, and curated datasets (including confirmed cases/deaths, demographics, risk factors, social distancing data) that can be used by other teams in the fight against COVID-19. We are collaborating with <a href="https://response4life.org/">Response4Life</a>, a non-profit organization, whose goal is to blunt the effect of COVID-19 through the production and appropriate distribution of PPE, medical equipment, and medical personnel to healthcare facilities across the United States.
 
                      <div align="center"> <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">View project on Github</a>
-                     <a type="button" class="btn btn-success" style="margin-bottom: 30px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">arXiv paper (coming soon)</a> </div>
+                     <a type="button" class="btn btn-success" style="margin-bottom: 30px;" href="https://www.stat.berkeley.edu/~binyu/ps/papers2020/covid19_paper.pdf">arXiv paper</a> </div>
                     </p>
 
                     <a href="#data" class="btn btn-circle page-scroll">
