--- a/_includes/03_visualizations.html
+++ b/_includes/03_visualizations.html
@@ -8,17 +8,17 @@
 
 
 <figure class="video_container">
-  <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/deaths.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>
+  <iframe src="results/deaths.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>
 </figure>
-<a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://yu-group.github.io/covid19-severity-prediction/results/deaths.html">View map in fullscreen</a>
+<a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/deaths.html">View interactive map in fullscreen</a>
 <p> <strong>County-level map</strong>: This map shows forecasts for the number of deaths at the county-level.</p>
 <br>
 
 
 <figure class="video_container">
-  <iframe src="https://yu-group.github.io/covid19-severity-prediction/results/severity_map.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>
+  <iframe src="results/severity_map.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>
 </figure>
-<a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://yu-group.github.io/covid19-severity-prediction/results/severity_map.html">View map in fullscreen</a>
+<a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/severity_map.html">View interactive map in fullscreen</a>
 
 <p> <strong>COVID pandemic severity index (CPSI)</strong>: this index is designed to help aid the distribution of medical resources to hospitals.
   It takes on three values (<font color="#AC3931">3: High</font>, <font color="#D3787D">2: Medium</font>, <font color="#6E8E96">1: Low</font>), indicating the severity of the covid-19 outbreak for a hospital on a certain day. It is calculated in three steps (more details <a href="https://yu-group.github.io/covid19-severity-prediction/results/hospital_index_animated.html">here</a>):
