--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,14 @@
     <!-- Custom Fonts -->
     <link href="assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123022910-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-123022910-2');
+    </script>
+
 </head>
