--- a/_includes/01_visualizations.html
+++ b/_includes/01_visualizations.html
@@ -25,6 +25,6 @@
   <br>
 </p>
 
-<p> Gsheets with our daily updated predictions: </p>
+<p style="text-align: center"> Gsheets with our daily updated predictions: </p>
 <div align="center"> <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://docs.google.com/spreadsheets/d/1ZSG7o4cV-G0Zg3wlgJpB2Zvg-vEN1i_76n2I-djL0Dk/edit#gid=1510898570">County-level gsheet</a>
 <a type="button" class="btn btn-success" style="margin-bottom: 30px;" href="https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=582592389">Hospital-level gsheet</a> </div>
