--- a/_includes/01_visualizations.html
+++ b/_includes/01_visualizations.html
@@ -1,16 +1,18 @@
 <h1 align="center"> visualizations </h1>
 
-<figure class="video_container">
-  <iframe src="results/deaths.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>
-</figure>
+<!--<figure class="video_container">-->
+<!--  <iframe src="results/deaths.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>-->
+<!--</figure>-->
+<a href="results/deaths.html"><img src="results/deaths.png"></a>
 <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/deaths.html">View interactive map in fullscreen</a>
 <p> <strong>County-level map</strong>: This map shows forecasts for the number of deaths at the county-level.</p>
 <br>
 
 
-<figure class="video_container">
-  <iframe src="results/severity_map.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>
-</figure>
+<!--<figure class="video_container">-->
+<!--  <iframe src="results/severity_map.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>-->
+<!--</figure>-->
+<a href="results/severity_map.html"><img src="results/severity_map.png"></a>
 <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/severity_map.html">View interactive map in fullscreen</a>
 
 <p> <strong>COVID pandemic severity index (CPSI)</strong>: this index is designed to help aid the distribution of medical resources to hospitals.
