about text update

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -7,7 +7,7 @@
                     <div class="model-box" style="margin-top: 100px">
                         <iframe class="model" src="https://docs.google.com/presentation/d/e/2PACX-1vRXKvNYDYm00f9EQHDMzMfs9n4otYEklUThbACGof0hEQLtJvrEn33mcRXPb3w8b9BKOawGnfl77Yfg/embed?start=false&loop=false&delayms=3000" frameborder="0" allowfullscreen=""></iframe>
                     </div>
-                    <p class="intro-text" style="margin-top: 10px; text-align: justify; ">
+                    <p style="margin-top: 10px">
     <a href="https://www.stat.berkeley.edu/~yugroup/people.html">The Yu Group </a> at UC Berkeley Statistics and EECS and CCB is
     working to help forecast the severity of the epidemic for individual counties and
     hospitals in the US. We develop interpretable models (updated daily) and
