add link to blog post

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -17,8 +17,11 @@
     to blunt the effect of COVID-19 through the production
     and appropriate distribution of PPE, medical equipment, and medical personnel to healthcare
     facilities across the United States.
-                     <div align="center"> <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">Github</a>
-                     <a type="button" class="btn btn-success" style="margin-bottom: 30px;" href="https://www.stat.berkeley.edu/~binyu/ps/papers2020/covid19_paper.pdf">arXiv paper</a> </div>
+                     <div align="center">
+                        <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">Github</a>
+                        <a type="button" class="btn btn-success" style="margin-bottom: 30px; margin-right: 10px;" href="https://www.stat.berkeley.edu/~binyu/ps/papers2020/covid19_paper.pdf">arXiv paper</a>
+                        <a type="button" class="btn btn-info" style="margin-bottom: 30px;" href="/assets/blog">blog post</a>
+                    </div>
                     </p>
 
                     <a href="#data" class="btn btn-circle page-scroll">
