--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -30,6 +30,9 @@
                         and appropriate distribution of PPE, medical equipment, and medical personnel to healthcare
                         facilities across the United States.
                     </p>
+		    <p style="margin-top: 10px">
+                        For hospital level prediction, please go to our<a href="http://hospitals.covidseverity.com/"> hospitalization prediction website </a> where one can upload data for a specific hospital and download prediction results for the given hospital. The uploaded data will only be temporarily used for prediction and will not be collected.
+                    </p>
 
                     <div align="center" style="margin-top: 30px">
                         <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">Github</a>
@@ -39,7 +42,7 @@
                     <!--<p style="margin-top: 10px">
                         For hospital level prediction, please go to our<a href="http://54.148.200.200:5000/"> hospitalization prediction website </a> where one can upload data for a specific hospital and download prediction results for the given hospital. The uploaded data will only be temporarily used for prediction and will not be collected.
 		    </p> -->
-
+			
                     <div class="model-box">
                         <iframe class="model" src="https://docs.google.com/presentation/d/e/2PACX-1vRXKvNYDYm00f9EQHDMzMfs9n4otYEklUThbACGof0hEQLtJvrEn33mcRXPb3w8b9BKOawGnfl77Yfg/embed?start=false&loop=false&delayms=3000" frameborder="0" allowfullscreen=""></iframe>
                     </div>
