--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -2,11 +2,13 @@
     <div class="intro-body">
         <div class="container">
             <div class="row">
-                <div class="grid-2-columns">
+                <div>
+                    <a type="button" class="btn btn-primary btn-lg" style="margin-top: 80px; margin-right: 10px;" href="results/search.html">Go to dashboard</a>
+                </div>
+                <div class="grid-2-columns" style="margin-top: 30px">
                         <div>
                             <a href="results/deaths.html" target="_blank"><img src="results/deaths.png" style="width: 100%;"></a>
                             <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/deaths.html" target="_blank">View interactive map in fullscreen</a>
-                            <a type="button" class="btn btn-success" style="margin-bottom: 30px; margin-right: 10px;" href="results/search.html">Search by county</a>
                             <!-- <p> <strong>County-level map</strong>: This map shows forecasts for the number of deaths at the county-level.</p> -->
                         </div>
                         <div>
