add new cases/deaths per 100k to dashboard

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -2,14 +2,19 @@
     <div class="intro-body">
         <div class="container">
             <div class="row">
-                <div>
-                    <a type="button" class="btn btn-primary btn-lg" style="margin-top: 80px; margin-right: 10px;" href="results/search.html">Go to dashboard</a>
-                </div>
-                <div class="grid-2-columns" style="margin-top: 30px">
+               <div>
+                <br>
+
+                <h2 style = " text-align: center; margin-top: 100px"> COVID-19 County Dashboard</h2>
+                    <p style = " text-align: center"> Our COVID-19 county dashboard allows for an in-depth look at COVID-19 cases and deaths in counties across the United States.      </p>
+
+                    <a type="button" class="btn btn-success" style="margin-right: 10px;" href="results/search.html">Go to dashboard</a>
+                <!--<h1 style = " text-align: center; margin-top: 650px"> About</h1> -->
+
+                <div class="grid-2-columns" style="margin-top: 20px">
                         <div>
                             <a href="results/deaths.html" target="_blank"><img src="results/deaths.png" style="width: 100%;"></a>
                             <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/deaths.html" target="_blank">View interactive map in fullscreen</a>
-                            <!-- <p> <strong>County-level map</strong>: This map shows forecasts for the number of deaths at the county-level.</p> -->
                         </div>
                         <div>
                             <a href="results/severity_map.html" target="_blank"><img src="results/severity_map.png" style="width: 100%;"></a>
@@ -21,7 +26,7 @@
                 <div class="col-md-8 col-md-offset-2">
 
 
-                    <p style="margin-top: 10px">
+                    <p style="margin-top: 30px">
                         <a href="https://www.stat.berkeley.edu/~yugroup/people.html">The Yu Group </a> at UC Berkeley Statistics and EECS and CCB is
                         working to help forecast the severity of the epidemic for individual counties and
                         hospitals in the US. We develop interpretable models (updated daily) and
