change front page pictures from .png to .svg for faster loading in the page

--- a/_includes/01_visualizations.html
+++ b/_includes/01_visualizations.html
@@ -8,7 +8,7 @@
 <p> <strong>County-level map</strong>: This map shows forecasts for the number of deaths at the county-level.</p>
 <br>
 
-<a href="results/search.html"><img src="results/search_map.png" style="width: 95%;"></a>
+<a href="results/search.html"><img src="results/search_map.svg" style="width: 95%;"></a>
 <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/search.html">Access time series of specific counties</a>
 <p> <strong>County-level map</strong>: Click this map to access cases/deaths time series of specific counties.</p>
 <br>
