--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -13,11 +13,11 @@
 
                 <div class="grid-2-columns" style="margin-top: 20px">
                         <div>
-                            <a href="results/deaths.html" target="_blank"><img src="results/deaths.png" style="width: 100%;"></a>
+                            <a href="results/deaths.html" target="_blank"><img src="results/deaths.svg" style="width: 100%;"></a>
                             <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/deaths.html" target="_blank">View interactive map in fullscreen</a>
                         </div>
                         <div>
-                            <a href="results/severity_map.html" target="_blank"><img src="results/severity_map.png" style="width: 100%;"></a>
+                            <a href="results/severity_map.html" target="_blank"><img src="results/severity_map.svg" style="width: 100%;"></a>
                             <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/severity_map.html" target="_blank">View interactive map in fullscreen</a>
                         </div>
                 </div>
