clean up all imports

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -2,82 +2,99 @@
     <div class="intro-body">
         <div class="container">
             <div class="row">
-               <div>
-                <br>
+                <div>
+                    <br>
 
-                <h2 style = " text-align: center; margin-top: 100px"> COVID-19 County Dashboard</h2>
-                    <p style = " text-align: center"> Our COVID-19 county dashboard allows for an in-depth look at COVID-19 cases and deaths in counties across the United States.      </p>
+                    <h2 style=" text-align: center; margin-top: 100px"> COVID-19 County Dashboard</h2>
+                    <p style=" text-align: center"> Our COVID-19 county dashboard allows for an in-depth look at
+                        COVID-19 cases and deaths in counties across the United States. </p>
 
-                    <a type="button" class="btn btn-success" style="margin-right: 10px;" href="results/search.html">Go to dashboard</a>
-                <!--<h1 style = " text-align: center; margin-top: 650px"> About</h1> -->
+                    <a type="button" class="btn btn-success" style="margin-right: 10px;" href="results/search.html">Go
+                        to dashboard</a>
+                    <!--<h1 style = " text-align: center; margin-top: 650px"> About</h1> -->
 
-                <div class="grid-2-columns" style="margin-top: 20px">
+                    <div class="grid-2-columns" style="margin-top: 20px">
                         <div>
-                            <a href="results/deaths.html" target="_blank"><img src="results/deaths.png" style="width: 100%;"></a>
-                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/deaths.html" target="_blank">View interactive map in fullscreen</a>
+                            <a href="results/deaths.html" target="_blank"><img src="results/deaths.png"
+                                                                               style="width: 100%;"></a>
+                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;"
+                               href="results/deaths.html" target="_blank">View interactive map in fullscreen</a>
                         </div>
                         <div>
-                            <a href="results/severity_map.html" target="_blank"><img src="results/severity_map.png" style="width: 100%;"></a>
-                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/severity_map.html" target="_blank">View interactive map in fullscreen</a>
+                            <a href="results/severity_map.html" target="_blank"><img src="results/severity_map.png"
+                                                                                     style="width: 100%;"></a>
+                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;"
+                               href="results/severity_map.html" target="_blank">View interactive map in fullscreen</a>
                         </div>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
 
 
-                    <p style="margin-top: 30px">
-                        <a href="https://www.stat.berkeley.edu/~yugroup/people.html">The Yu Group </a> at UC Berkeley Statistics and EECS and CCB is
-                        working to help forecast the severity of the epidemic for individual counties and
-                        hospitals in the US. We develop interpretable models (updated daily) and
-                        curate data to predict the trajectory of COVID-19-related deaths.
-                        This website provides access to those predictions, in the form of interactive visualizations.
-                        We are collaborating with <a href="https://response4life.org/">Response4Life</a>
-                        to blunt the effect of COVID-19 through the production
-                        and appropriate distribution of PPE, medical equipment, and medical personnel to healthcare
-                        facilities across the United States.
-                    </p>
+                        <p style="margin-top: 30px">
+                            <a href="https://www.stat.berkeley.edu/~yugroup/people.html">The Yu Group </a> at UC
+                            Berkeley Statistics and EECS and CCB is
+                            working to help forecast the severity of the epidemic for individual counties and
+                            hospitals in the US. We develop interpretable models (updated daily) and
+                            curate data to predict the trajectory of COVID-19-related deaths.
+                            This website provides access to those predictions, in the form of interactive
+                            visualizations.
+                            We are collaborating with <a href="https://response4life.org/">Response4Life</a>
+                            to blunt the effect of COVID-19 through the production
+                            and appropriate distribution of PPE, medical equipment, and medical personnel to healthcare
+                            facilities across the United States.
+                        </p>
 
-                         <p style="margin-top: 10px">
-                        For hospital level prediction, please go to our<a href="http://hospitals.covidseverity.com"> hospitalization prediction website </a> where one can upload data for a specific hospital and download prediction results for the given hospital. The uploaded data will only be temporarily used for prediction and will not be collected.
-                    </p>
+                        <p style="margin-top: 10px">
+                            For hospital level prediction, please go to our<a href="http://hospitals.covidseverity.com">
+                            hospitalization prediction website </a> where one can upload data for a specific hospital
+                            and download prediction results for the given hospital. The uploaded data will only be
+                            temporarily used for prediction and will not be collected.
+                        </p>
 
-                    <div align="center" style="margin-top: 30px">
-                        <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="https://github.com/Yu-Group/covid19-severity-prediction/">Github</a>
-                        <a type="button" class="btn btn-success" style="margin-bottom: 30px; margin-right: 10px;" href="https://arxiv.org/abs/2005.07882">arXiv paper</a>
-                        <a type="button" class="btn btn-info" style="margin-bottom: 30px;" href="/assets/blog">blog post</a>
+                        <div align="center" style="margin-top: 30px">
+                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;"
+                               href="https://github.com/Yu-Group/covid19-severity-prediction/">Github</a>
+                            <a type="button" class="btn btn-success" style="margin-bottom: 30px; margin-right: 10px;"
+                               href="https://arxiv.org/abs/2005.07882">arXiv paper</a>
+                            <a type="button" class="btn btn-info" style="margin-bottom: 30px;" href="/assets/blog">blog
+                                post</a>
+                        </div>
+                        <!--<p style="margin-top: 10px">
+                            For hospital level prediction, please go to our<a href="http://54.148.200.200:5000/"> hospitalization prediction website </a> where one can upload data for a specific hospital and download prediction results for the given hospital. The uploaded data will only be temporarily used for prediction and will not be collected.
+                </p> -->
+
+                        <div class="model-box">
+                            <iframe class="model"
+                                    src="https://docs.google.com/presentation/d/e/2PACX-1vRXKvNYDYm00f9EQHDMzMfs9n4otYEklUThbACGof0hEQLtJvrEn33mcRXPb3w8b9BKOawGnfl77Yfg/embed?start=false&loop=false&delayms=3000"
+                                    frameborder="0" allowfullscreen=""></iframe>
+                        </div>
+
+                        <a href="#data" class="btn btn-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>
+                        </a>
+
                     </div>
-                    <!--<p style="margin-top: 10px">
-                        For hospital level prediction, please go to our<a href="http://54.148.200.200:5000/"> hospitalization prediction website </a> where one can upload data for a specific hospital and download prediction results for the given hospital. The uploaded data will only be temporarily used for prediction and will not be collected.
-		    </p> -->
-			
-                    <div class="model-box">
-                        <iframe class="model" src="https://docs.google.com/presentation/d/e/2PACX-1vRXKvNYDYm00f9EQHDMzMfs9n4otYEklUThbACGof0hEQLtJvrEn33mcRXPb3w8b9BKOawGnfl77Yfg/embed?start=false&loop=false&delayms=3000" frameborder="0" allowfullscreen=""></iframe>
-                    </div>
-
-                    <a href="#data" class="btn btn-circle page-scroll">
-                        <i class="fa fa-angle-double-down animated"></i>
-                    </a>
-
                 </div>
             </div>
         </div>
-    </div>
 </header>
 <style>
     .model-box {
-  position:   relative;
-  width:      100%;
-  height: 0;
-  padding-top:   66.6%; /* This is your aspect ratio */ }
+        position: relative;
+        width: 100%;
+        height: 0;
+        padding-top: 66.6%; /* This is your aspect ratio */
+    }
 
-.model {
-  position: absolute;
-  top:      0;
-  left:     0;
-  bottom:   0;
-  right:    0;
-  width:    100%;
-  height:   100%
-}
+    .model {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%
+    }
 </style>
