add group photo

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -44,7 +44,7 @@
 
                         <p style="margin-top: 10px">
                             For hospital level prediction, please go to our<a href="http://hospitals.covidseverity.com">
-                            hospitalization prediction website </a> where one can upload data for a specific hospital
+                            hospitalization prediction page </a> where one can upload data for a specific hospital
                             and download prediction results for the given hospital. The uploaded data will only be
                             temporarily used for prediction and will not be collected.
                         </p>
