--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -31,6 +31,11 @@
           </div>
     </section>
 
+    <section id="our_team" class="container content-section text-center">
+        <h1> Our team </h1>
+        <img src="assets/group_photo.svg" style="width:100%;">
+    </section>>
+
 {% include js.html %}
 
 
