add acknowledgement to AWS/Google.

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -34,6 +34,7 @@
     <section id="our_team" class="container content-section text-center">
         <h1> Our team </h1>
         <img src="assets/group_photo.svg" style="width:100%;">
+        Thanks to support from AWS and Google.
     </section>>
 
 {% include js.html %}
