add matching/dashboard link

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -4,33 +4,33 @@
             <div class="row">
                 <div>
                     <br>
-
-                    <h2 style=" text-align: center; margin-top: 100px"> COVID-19 County Dashboard</h2>
-                    <p style=" text-align: center"> Our COVID-19 county dashboard allows for an in-depth look at
-                        COVID-19 cases and deaths in counties across the United States. </p>
-
-                    <a type="button" class="btn btn-success" style="margin-right: 10px;" href="results/search.html">Go
-                        to dashboard</a>
-                    <!--<h1 style = " text-align: center; margin-top: 650px"> About</h1> -->
+                    <br>
+                    <br>
+                    <br>
 
                     <div class="grid-2-columns" style="margin-top: 20px">
                         <div>
-                            <a href="results/deaths.html" target="_blank"><img src="results/deaths.svg" style="width: 100%;"></a>
-                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/deaths.html" target="_blank">View interactive map in fullscreen</a>
+                            <a href="results/search.html" target="_blank"><img src="assets/dashboard.jpg" style="width: 90%;"></a>
+                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px; margin-top: 10px" href="results/search.html" target="_blank">View interactive dashboard</a>
+                            <p style="text-align: center"> In-depth look at
+                        COVID-19 cases/deaths in counties across the US. </p>
                         </div>
                         <div>
-                            <a href="results/severity_map.html" target="_blank"><img src="results/severity_map.svg" style="width: 100%;"></a>
-                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/severity_map.html" target="_blank">View interactive map in fullscreen</a>
+                            <a href="http://matching.covidseverity.com/" target="_blank"><img src="assets/matching.jpg" style="width: 90%;"></a>
+                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px; margin-top: 10px" href="http://matching.covidseverity.com/" target="_blank">Find similar counties</a>
+                            <p style="text-align: center;"> Find and compare similar counties based on different attributes. </p>
                         </div>
                     </div>
+
+
+
                 </div>
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
 
-
                         <p style="margin-top: 30px">
                             <a href="https://www.stat.berkeley.edu/~yugroup/people.html">The Yu Group </a> at UC
-                            Berkeley Statistics and EECS and CCB is
+                            Berkeley Statistics / EECS / CCB is
                             working to help forecast the severity of the epidemic for individual counties and
                             hospitals in the US. We develop interpretable models (updated daily) and
                             curate data to predict the trajectory of COVID-19-related deaths.
