--- a/_includes/01_visualizations.html
+++ b/_includes/01_visualizations.html
@@ -3,6 +3,18 @@
 <!--<figure class="video_container">-->
 <!--  <iframe src="results/deaths.html" frameborder="0" allowfullscreen="true" width="100%" height="800"> </iframe>-->
 <!--</figure>-->
+
+<div class="grid-2-columns" style="margin-top: 20px">
+    <div>
+        <a href="results/deaths.html" target="_blank"><img src="results/deaths.svg" style="width: 100%;"></a>
+        <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/deaths.html" target="_blank">View interactive map in fullscreen</a>
+    </div>
+    <div>
+        <a href="results/severity_map.html" target="_blank"><img src="results/severity_map.svg" style="width: 100%;"></a>
+        <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/severity_map.html" target="_blank">View interactive map in fullscreen</a>
+    </div>
+</div>
+
 <a href="results/deaths.html"><img src="results/deaths.svg" style="width: 100%;"></a>
 <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px;" href="results/deaths.html">View interactive map in fullscreen</a>
 <p> <strong>County-level map</strong>: This map shows forecasts for the number of deaths at the county-level.</p>
