add link to hostpital website

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -34,7 +34,7 @@
     <section id="our_team" class="container content-section text-center">
         <h1> Our team </h1>
         <img src="assets/group_photo.svg" style="width:100%;">
-        Thanks to support from AWS and Google.
+        <p style="font-size: 25px; text-align: center;">Thanks to support from AWS and Google.</p>
     </section>>
 
 {% include js.html %}
