update dashboard thumbnail

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -10,7 +10,7 @@
 
                     <div class="grid-2-columns" style="margin-top: 20px">
                         <div>
-                            <a href="results/search.html" target="_blank"><img src="assets/dashboard.jpg" style="width: 90%;"></a>
+                            <a href="results/search.html" target="_blank"><img src="results/search_map.svg" style="width: 90%;"></a>
                             <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px; margin-top: 10px" href="results/search.html" target="_blank">View interactive dashboard</a>
                             <p style="text-align: center"> In-depth look at
                         COVID-19 cases/deaths in counties across the US. </p>
