--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -10,14 +10,14 @@
 
                     <div class="grid-2-columns" style="margin-top: 20px">
                         <div>
-                            <a href="http://dashboard.covidseverity.com/" target="_blank"><img src="results/search_map.svg" style="width: 90%;"></a>
-                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px; margin-top: 10px" href="http://dashboard.covidseverity.com/" target="_blank">View interactive dashboard</a>
+                            <a href="http://dashboard.covidseverity.com" target="_blank"><img src="results/search_map.svg" style="width: 90%;"></a>
+                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px; margin-top: 10px" href="http://dashboard.covidseverity.com" target="_blank">View interactive dashboard</a>
                             <p style="text-align: center"> In-depth look at
                         COVID-19 cases/deaths in counties across the US. </p>
                         </div>
                         <div>
-                            <a href="http://matching.covidseverity.com/" target="_blank"><img src="assets/matching.svg" style="width: 90%;"></a>
-                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px; margin-top: 10px" href="http://matching.covidseverity.com/" target="_blank">Find similar counties</a>
+                            <a href="http://matching.covidseverity.com" target="_blank"><img src="assets/matching.svg" style="width: 90%;"></a>
+                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px; margin-top: 10px" href="http://matching.covidseverity.com" target="_blank">Find similar counties</a>
                             <p style="text-align: center;"> Find and compare similar counties based on different attributes. </p>
                         </div>
                     </div>
