shorten intro text

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -13,7 +13,7 @@
                             <a href="http://dashboard.covidseverity.com" target="_blank"><img src="results/search_map.svg" style="width: 90%;"></a>
                             <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px; margin-top: 10px" href="http://dashboard.covidseverity.com" target="_blank">View interactive dashboard</a>
                             <p style="text-align: center"> In-depth look at
-                        COVID-19 cases/deaths in counties across the US. </p>
+                        COVID-19 in counties across the US. </p>
                         </div>
                         <div>
                             <a href="http://matching.covidseverity.com" target="_blank"><img src="assets/matching.svg" style="width: 90%;"></a>
