--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -16,8 +16,8 @@
                         COVID-19 in counties across the US. </p>
                         </div>
                         <div>
-                            <a href="http://matching.covidseverity.com" target="_blank"><img src="assets/matching.svg" style="width: 90%;"></a>
-                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px; margin-top: 10px" href="http://matching.covidseverity.com" target="_blank">Find similar counties</a>
+                            <a href="https://yu-group.github.io/covid19-dashboard/results/search.html" target="_blank"><img src="assets/matching.svg" style="width: 90%;"></a>
+                            <a type="button" class="btn btn-primary" style="margin-bottom: 30px; margin-right: 10px; margin-top: 10px" href="https://yu-group.github.io/covid19-dashboard/results/search.html" target="_blank">Find similar counties</a>
                             <p style="text-align: center;"> Find and compare similar counties based on different attributes. </p>
                         </div>
                     </div>
